# anystring

anystring/: Cargo.toml
anystring/src/: lib.rs
anystring_macro/: Cargo.toml
anystring_macro/src/: lib.rs
